feat: added dotenv
